feat: 将hotels token改为从环境变量读取，为空时使用默认逻辑从网页动态获取

--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@ DB_NAME=iptv
 
 # API配置
 QUAKE_TOKEN=你的360网络测绘API_TOKEN
+HOTELS_TOKEN=你的酒店IPTV Token（可选，为空时从网页动态获取）
 
 # 其他配置
 PYTHON_PATH=/usr/bin/python3
